[3.0.5]
        * [CHANGE]: Data view has now a 'cover' with progress bar when commiting more changes at once. This eliminates weird GUI freeze when commiting lots of new/deleted rows.
        * [CHANGE]: Populate dialog has now progress bar when working.

[3.0.4]
        * [ADDED]: Import dialog has now "Ignore errors" option, to skip rows that causes problems (constraint violation, wrong column count, etc).
        * [CHANGE]: Enhanced Copy&Paste capabilities of data grid, so copying and pasting internally in SQLiteStudio will not be limited by TSV format (NULL values will be distinguished, tab characters will be allowed in values), only pasting from outside will be affected by TSV limitations.
        * [CHANGE]: "Invalid database" icon changed, so it's no longer confusing with "Connected" database.
        * [CHANGE]: "Databases" panel cannot be closed/hidden anymore.
        * [CHANGE]: Database dialog reorganized to look a bit nicer, db type moved to top, URL browse button for file is now separated to 2 buttons.
        * [BUGFIX]: #2795 XmlExport plugin: Fixed crash that happend in most exports.
        * [BUGFIX]: XmlExport plugin: Fixed column number attribute incrementing for data rows.
        * [BUGFIX]: #2793 SqlEnterpriseFormatter plugin: Fixed formatting queries starting with EXPLAIN and EXPLAIN QUERY PLAN.
        * [BUGFIX]: #2786 Fixed double plugin names in config dialog for built-in plugins.
        * [BUGFIX]: Fixed dead-lock when fixing path for a database that pointed to inexisting file.
        * [BUGFIX]: Fixed data editing for SQL queries joining the same table several times.
        * [BUGFIX]: Fixed "Ctrl+W"/"Cmd+W" shortcut to work every time, not only every second time.
        * [BUGFIX]: Fixed order of window focusing when closing with "Ctrl+W"/"Cmd+W" shortcut.
        * [BUGFIX]: #2797 Database type is no longer disabled when adding existing database file.