@@ -1,6 +1,8 @@
 [3.0.5]
         * [CHANGE]: Data view has now a 'cover' with progress bar when commiting more changes at once. This eliminates weird GUI freeze when commiting lots of new/deleted rows.
         * [CHANGE]: Populate dialog has now progress bar when working.
+        * [BUGFIX]: Fixed crash when closing Populate Dialog while populating was in progress.
+        * [BUGFIX]: Fixed warning messages when there was a problem with restoring windows from last session. A message contains now window name that caused problem.
 
 [3.0.4]
         * [ADDED]: Import dialog has now "Ignore errors" option, to skip rows that causes problems (constraint violation, wrong column count, etc).
